# nix-daemon

./: Cargo.toml  README.md  tests.nix
src/: lib.rs  wire.rs
src/nix/: mod.rs  wire.rs
tests/: integration_test.rs  nix.rs  utils.rs
