# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-daemon"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = "0.4.31"
futures = "0.3.29"
num_enum = "0.7.1"
tap = "1.0.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt", "macros", "parking_lot", "io-util", "net"] }
tokio-stream = "0.1.14"
tokio-test = "0.4.3"
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
